Fixed floating label missalignement

--- a/Angular/src/app/components/request-form/request-form.component.css
+++ b/Angular/src/app/components/request-form/request-form.component.css
@@ -145,7 +145,7 @@ textarea {
     margin-top: 20px;
 }
 
-input {
+p-floatlabel {
     margin-bottom: 20px;
 }
 
